# git-pulse

./: .gitignore  README.md  bun.lockb  index.html  package.json  tailwind.config.js  vite.config.ts
src/: App.css  App.tsx  main.tsx  root.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: check_auth.rs  lib.rs  main.rs  window_manager.rs
src-tauri/src/ais/: changelog.rs  file_suggestions.rs  mod.rs  types.rs
src-tauri/src/github/: github_client.rs  interactions.rs  issues.rs  mod.rs  oauth.rs  repos.rs  types.rs
src-tauri/src/obsidian/: save.rs
src-tauri/src/recents/: mod.rs  recents.rs
src-tauri/src/settings/: settings.rs
src/components/: animation-wrapper.tsx  header.tsx  notification-component.tsx  sidebar-component.tsx
src/components/ui/: button.tsx  card.tsx  context-menu.tsx  dialog.tsx  popover.tsx  sidebar.tsx  table.tsx
src/dashboard/: dashboard.tsx
src/hooks/: use-add-issue.ts  use-comments.ts  use-create-fetch-issues.ts  use-issue.ts
src/issues/: issue-page.tsx
src/issues/components/: save-to-obsidian-button.tsx
src/pages/comments/: comment-page.tsx
src/pages/dashboard/: dashboard.tsx
src/pages/dashboard/components/: add-new-repo.tsx  issue-card.tsx  issue-table.tsx  repo-tabs.tsx  select-repos.tsx  titlebar.tsx
src/pages/issues/: issue-page.tsx
src/pages/search/: command.tsx
src/pages/settings/: settings.tsx
src/stores/: auth-store.ts  pinned-repo-store.ts  recently-viewed-store.ts  settings-store.ts
src/types/: types.ts
(+12 files in other folders)
