[package]
name = "git-pulse"
version = "0.1.0"
description = "An app to track git issues and export as needed"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "git_pulse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "macos-private-api",'tray-icon'] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
chrono = { version = '0.4', features = ['serde'] }
octocrab = "0.42.0"
anyhow = "1.0"
tauri-plugin-log = "2"
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace.git", branch = "v2" }
anthropic = "0.0.8"
window-vibrancy = "0.5.2"

# AI
